@@ -19,7 +19,7 @@ parse_args (int argc, ACE_TCHAR *argv[])
         ior_output_file = get_opts.opt_arg ();
         break;
       case 'k':
-        key = get_opts.opt_arg ();
+        key = ACE_TEXT_ALWAYS_CHAR(get_opts.opt_arg ());
         break;
 
       case '?':
