@@ -1,3 +1,11 @@
+Tue Oct  7 15:20:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * orbsvcs/tests/Bug_2247_Regression/server.cpp
+        * orbsvcs/tests/Bug_2248_Regression/client.h
+        * orbsvcs/tests/Bug_2248_Regression/server.cpp
+        * orbsvcs/tests/Bug_2285_Regression/server2.cpp
+          ACE_TCHAR fixes
+
 Tue Oct  7 15:09:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * orbsvcs/tests/AVStreams/Pluggable_Flow_Protocol/TimeStamp.cpp
